# learning-gamedev

./: README.md
game01/: Makefile  game.cpp  game01.c  game_object.cpp  game_object.h  meson.build  player.cpp  player.h  utils.cpp  utils.h  windows-cross.txt
game01/.cache/clangd/index/: game01.c.2B35182668683B74.idx
